@@ -3,7 +3,6 @@ package uk.gov.hmcts.reform.wataskmanagementapi.services.utils;
 import uk.gov.hmcts.reform.wataskmanagementapi.cft.query.TaskResourceCaseQueryBuilder;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 
 public final class DeleteTasksServiceHelper {
@@ -14,6 +13,6 @@ public final class DeleteTasksServiceHelper {
     public static List<String> getTaskIds(final List<TaskResourceCaseQueryBuilder> taskResourceCaseQueryBuilders) {
         return taskResourceCaseQueryBuilders.stream()
                 .map(TaskResourceCaseQueryBuilder::getTaskId)
-                .collect(Collectors.toList());
+                .toList();
     }
 }
