@@ -23,7 +23,6 @@ import java.util.List;
 import java.util.Map;
 import java.util.Set;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 import static java.util.Arrays.asList;
 import static java.util.Collections.emptyList;
@@ -78,9 +77,9 @@ class TaskTypesServiceTest {
         assertNotNull(response.getTaskTypeResponses());
         assertEquals(1, response.getTaskTypeResponses().size());
         assertEquals("processApplication", response.getTaskTypeResponses()
-                .stream().collect(Collectors.toList()).get(0).getTaskType().getTaskTypeId());
+                .stream().toList().get(0).getTaskType().getTaskTypeId());
         assertEquals("Process Application", response.getTaskTypeResponses()
-                .stream().collect(Collectors.toList()).get(0).getTaskType().getTaskTypeName());
+                .stream().toList().get(0).getTaskType().getTaskTypeName());
 
     }
 
@@ -164,22 +163,22 @@ class TaskTypesServiceTest {
         assertEquals(
                 "processApplication",
                 response.getTaskTypeResponses()
-                    .stream().collect(Collectors.toList()).get(0).getTaskType().getTaskTypeId()
+                    .stream().toList().get(0).getTaskType().getTaskTypeId()
         );
         assertEquals(
                 "Process Application",
             response.getTaskTypeResponses()
-                .stream().collect(Collectors.toList()).get(0).getTaskType().getTaskTypeName()
+                .stream().toList().get(0).getTaskType().getTaskTypeName()
         );
         assertEquals(
                 "reviewAppealSkeletonArgument",
             response.getTaskTypeResponses()
-                .stream().collect(Collectors.toList()).get(1).getTaskType().getTaskTypeId()
+                .stream().toList().get(1).getTaskType().getTaskTypeId()
         );
         assertEquals(
                 "Review Appeal Skeleton Argument",
             response.getTaskTypeResponses()
-                .stream().collect(Collectors.toList()).get(1).getTaskType().getTaskTypeName()
+                .stream().toList().get(1).getTaskType().getTaskTypeName()
         );
     }
 
@@ -198,7 +197,7 @@ class TaskTypesServiceTest {
     }
 
     @BeforeEach
-    public void setUp() {
+    void setUp() {
         taskTypesService = new TaskTypesService(
             dmnEvaluationService
         );
